unpackaged/main/default/objects/pse__Billing_Event_Calculation_Detail__c/pse__Billing_Event_Calculation_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores the selected values for project, account, region, practice and group.</description>
    <label>Billing Event Calculation Detail</label>
    <nameField>
        <displayFormat>BECD-{0000}</displayFormat>
        <label>Billing Event Calculation Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Calculation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>