unpackaged/main/default/objects/pse__Billing_Event_Calculation_Detail__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Event Calculation Details</relationshipLabel>
    <relationshipName>Billing_Event_Calculation_Details</relationshipName>
    <type>Lookup</type>
</CustomField>