unpackaged/main/default/objects/pse__Billing_Event_Calculation_Detail__c/fields/pse__Billing_Event_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event_Calculation__c</fullName>
    <label>Billing Event Calculation</label>
    <referenceTo>pse__Billing_Event_Calculation__c</referenceTo>
    <relationshipLabel>Billing Event Calculation Details</relationshipLabel>
    <relationshipName>Billing_Event_Calculation_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>