unpackaged/main/default/objects/pse__Billing_Event_Calculation_Detail__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Billing Event Calculation Details</relationshipLabel>
    <relationshipName>Billing_Event_Calculation_Details</relationshipName>
    <type>Lookup</type>
</CustomField>